# crossover-hermes

./: .cursorignore  .cursorindexignore  .env  .env-template  .gitignore  README.md  coverage.xml  create_offers_csv.py  debug_fulfiller.py  debug_fulfiller_flow.py  debug_promotion.py  dprint.json  hermes_submission.ipynb  integration-tests-log.txt  jupiter-notebooks.mdc  langgraph.json  main.py  mypy.ini  pyproject.toml  rename_agents.sh  rename_files.sh  test_simplified.py  update_inits.py  vector_store_test_output.txt
.archive/: README.md  assignment-solution.md  assignment.ipynb  assignment.md  hermes-poc.md  hermes-poc.py  hermes.ipynb  hermes_simplified.py  hermes_solution_notebook.md  implementation-draft.md  pipeline.md  plan.md  poc-flow.mmd  poc-model.mmd
.archive/prompts/: 01-classification-signal-extraction-agent.md  02-product-matcher-agent.md  03-order-processing-agent.md  04-inquiry-processing-agent.md  05-response-composer-agent.md  sales-email-intelligence-guide.md
.cursor/: mcp.json
.cursor/notes/: action-plan.md  advisor_agent_simplification.md  assignment.ipynb  candidate-submission-guide.md  classifier_agent_analysis.md  claude_implementation_tracker.md  code-analysis.md  composer-model-simplification.md  composer_validation_strategy.md  email-evaluation.md  hermes_code_analysis_findings.md  hermes_master_evaluator_plan.md  hermes_notebook_to_project_plan.md  issues.md  langchain_parser_comparison.md  model_refactoring.md  notebook_tool_failures.md  promotion-system-fixes.md  stockkeeper_agent_analysis.md  stockkeeper_integration_tests.md  submission-evaluation-instructions.md  tool_calling_improvements.md  tool_schema_fix.md  vector_store_simplification.md
.cursor/notes-archive/: advisor_agent_simplification.md  agents-code-review.md  architecture-simplification.md  architecture_plan.md  catalog_tools_test_plan.md  code-report.md  composer_agent_analysis.md  deduplication_removal.md  email-evaluation.md  failing_integration_tests.md  fulfiller_agent_analysis.md  hermes_master_evaluator_implementation.md  hermes_notebook_to_project_plan.md  integration_test_failures.md  model_refactoring_summary.md  offers-validation-issues.md  product_resolver_changes.md  product_resolver_plan.md  submission-evaluation-instructions.md  submission-evaluation.md  submission_review_issues.md  test_checklist.md  test_plan.md  vector_store_search_analysis.md  workflow-runners-clarification.md
.cursor/rules/: the-basics.mdc
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/: emails-for-offers.csv  emails.csv  offers.md  products.csv
data/experiments/: emails - inputs.csv  pg__gemini-2.5-flash-preview-04-17__1e591a25  smaple-emails.jsonl
docs/: env-sample.md
docs/ITDs/: ITD-001-Vector-DB-Selection.md  ITD-002-Embedding-Model-Selection.md  ITD-003-Product-Mapping-Strategy.md  ITD-004-RAG-Orchestration-Approach.md  ITD-005-Agent-Architecture.md  ITD-006-Product-Matching-Implementation.md  ITD-007-Pinecone-Configuration.md
docs/architecture/: README.md  Review_Tracker.md  agents.md  infrastructure.md  overview.md  workflow.md
docs/architecture-details/: README.md  agents.md  data-flow.md  infrastructure.md  llm-integration.md  models.md  system-overview.md  tools.md  workflow.md
docs/architecture-overview/: README.md  agents.md  ai-techniques.md  architecture-evaluation.md  evaluation-report.md  llm-integration.md  models.md  system-architecture.md  system-overview.md  technical-implementation.md  workflow-engine.md  workflow.md
docs/assignment/: assignment-instructions.md  assignment-q&a.md  hidden-evaluation-criteria.md
docs/presentation/: 01_title.md  02_executive_summary.md  03_requirements_showcase.md  04_advanced_ai_techniques.md  05_architecture_elegance.md  06_code_quality_excellence.md  07_scalability_proof.md  08_output_precision.md  09_bonus_features.md  10_deep_dive_navigation.md  11_conclusion.md  index.md
docs/research/: research_configuration_management.md  research_error_handling.md  research_langgraph_architecture.md  research_mcp_vs_tool_calling.md  research_message_handling.md  research_scalability.md  research_state_management.md  research_testing_evaluation.md  research_tool_design.md  research_vector_database.md
docs/summaries/: cli.py.md  config.py.md  core.py.md  state.py.md
gemini-src/: __intro__.md  config.py  output.py  pipeline.py  process_emails.py  state.py  vectorstore.py
gemini-src/agents/: __intro__.md  email_classifier.py  inquiry_responder.py  order_processor.py  response_composer.py
gemini-src/prompts/: __intro__.md  email_classifier.py  inquiry_responder.py  order_processor.py  response_composer.py
gemini-src/tools/: __intro__.md  catalog_tools.py  order_tools.py  response_tools.py
hermes/: __init__.py  __main__.py  cli.py  config.py  core.py  custom_types.py  state.py
hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
hermes/agents/: __init__.py  agents.md
notebooks/: hermes.ipynb  test-notebook.ipynb  test_classifier.ipynb
output/: E001-result.json  email-classification.csv  inquiry-response.csv  order-response.csv  order-status.csv
sample-data/: products.csv  round_trip.ipynb  sample.ipynb  sample.md  sample.py  sample_corrected.ipynb  sample_corrected.py  sample_with_attributes.ipynb  sample_with_attributes.md  sample_with_curly_attributes.ipynb  sample_with_curly_attributes.md
src/: __init__.py  __intro__.md  config.py  llm_client.py  output.py  pipeline.py  process_emails.py  state.py  vectorstore.py  workflow.py  workflow.py.md
tests/: README.md  __init__.py  run_tests.sh  test_catalog_tools.py  test_order_tools.py  test_promotion_tools.py  test_resolve_product_mention.py  test_vector_store.py
tools/: README.md  create_assignment_output.py  evaluate_agent_flow.py  evaluate_custom.py  evaluate_workflow.py  ipynb_to_markdown.py  md_py_to_notebook.py  run_workflow.py  test_advisor.py  test_advisor_only.py  test_inquiry_responder.py  test_inquiry_responder_only.py  upload_experiments.py
(+505 files in other folders)
